# PCN-Internship-2026-Rafia-Ali

./: .env.example  .gitignore  AGENTS.md  CLEANUP_AUDIT.md  LICENSE  Makefile  PLAN.md  README.md  TASK_SPEC.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: analysis_rules.yaml  event_thresholds.yaml  graph_rules.yaml  locations.yaml  pipeline.yaml
data/analysis/: analysis_summary.json  climate_indicator_annual_values.csv  climate_indicator_trends.csv  cooccurring_patterns.csv  cross_border_lag_summary.csv  cross_border_precursor_edges.csv  highest_rainfall.csv  multi_event_locations.csv  pakistan_weather_exposure_ranking.csv  weather_exposure_ranking.csv
data/graph/: graph_summary.json
data/processed/: collection_summary.json  data_coverage.json  event_detection_summary.json  event_thresholds.csv  weather_events.csv
demo_video/: README.md
outputs/: visualization_manifest.json
outputs/graph/: weather_knowledge_graph.html
outputs/maps/: weather_locations.html
outputs/validation/: validation_report.json  validation_report.md
reports/: llm_usage.md  technical_report.md
scripts/: run_pipeline.py  validate_requirements.py
src/weather_kg/: __init__.py  __main__.py  analysis.py  cache.py  config.py  dashboard.py  events.py  graph.py  logging_config.py  main.py  models.py  normalize.py  open_meteo.py  (+4 more)
tests/: test_analysis.py  test_cli.py  test_config.py  test_dashboard.py  test_events.py  test_graph.py  test_normalize.py  test_open_meteo.py  test_pipeline.py  test_query_service.py  test_validation.py  test_visualization.py
(+24 files in other folders)
